--- a/container/public/index.html
+++ b/container/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My New Microfrontend</title>
+    <title>Microfrontend Test</title>
   </head>
   <body>
     <div id="root"></div>
