Created cloudfront invalidation

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Microfrontend Test 6</title>
+    <title>Microfrontend Completed</title>
   </head>
   <body>
     <div id="root"></div>
