First change to Testing branch

--- a/auth/public/index.html
+++ b/auth/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Host App</title>
+    <title>Auth Appplication 1</title>
   </head>
   <body>
     <div id="_auth-dev-root"></div>
