--- a/auth/public/index.html
+++ b/auth/public/index.html
@@ -4,6 +4,7 @@
     <title>Host App</title>
   </head>
   <body>
+    <!-- the mounting point -->
     <div id="_auth-dev-root"></div>
   </body>
 </html>
